--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Third Repoository</title>
+    <title>My third Documentory</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>My name is MUTASIM BELLAH</h1>
     <h2>Now I read in BSC in Computer Science and Engineering in Faridpur Engineering College</h2>
-<<<<<<< HEAD
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat fugiat minus, quo voluptatum repudiandae eveniet reiciendis expedita officiis natus illum at explicabo consequatur incidunt. Tempora, at quae corporis distinctio explicabo iusto nesciunt numquam ratione, reiciendis eligendi veritatis deleniti dolorem? Soluta pariatur ipsum corrupti voluptatem quidem maiores placeat neque dolores ad vero similique ullam odit quisquam est, repellat architecto sed? Magnam quas praesentium, at beatae ipsam molestias aperiam incidunt, ipsum sint aut quisquam reprehenderit asperiores quo deleniti! Quibusdam quasi sapiente soluta voluptatibus magnam quod porro, atque a numquam vel, accusantium neque suscipit perspiciatis est aut, corrupti praesentium tempore ad? Doloremque, facere!</p>
-=======
     <img src="Mutasim.jpg" alt="">
->>>>>>> image-add
+    <img src="developer.png" alt="">
 </body>
 </html>
